# Blood-Grouping-With-ML

./: .replit  README.md  blood_typing.py  image_processor.py  main.py  model_evaluation.py  model_trainer.py  models.py  pyproject.toml  web_interface.py
attached_assets/: Pasted-import-cv2-import-numpy-as-np-from-skimage-feature-import-graycomatrix-graycoprops-import-os-fr-1745189975583.txt  Pasted-import-cv2-import-numpy-as-np-import-os-import-tkinter-as-tk-from-tkinter-import-messagebox-fil-1745189953060.txt
static/css/: styles.css
static/js/: main.js
templates/: about.html  batch_analysis.html  history.html  index.html  layout.html  results.html  view_result.html
